--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <h1>Registration Sheet</h1>
-<form action="#" th:action="@{'/register'}" method="post" >
+<form th:action="@{'/register'}" method="post" th:object="${user}">
     <label for="username">Choose your name:</label>
-    <input id="username" type="text" />
+    <input type="hidden" th:field="*{id}"/>
+    <input id="username" th:field="*{username}" type="text" />
     <input type="submit" value="Enter">
 </form>
 </body>
